--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
                     Psychology ]</li>
                 <li><a href="https://en.wikipedia.org/wiki/On_Intelligence">On Intelligence</a> [ Neuroscience ]</li>
                 <li><a href="https://en.wikipedia.org/wiki/Veronika_Decides_to_Die">Veronika Decides to Die</a> [ Novel ]</li>
+                <li><a href="https://en.wikipedia.org/wiki/The_Book_Thief">The Book Thief</a> [ Novel ]</li>
+                <li><a href="https://www.goodreads.com/book/show/43306206-the-courage-to-be-disliked">The Courage to be Disliked</a> [ Self-help/Psychology ]</li>
             </ul>
             I'll probably add more here...
             </p>
