--- a/index.html
+++ b/index.html
@@ -26,13 +26,32 @@
             </p>
             <h2>About me</h2>
             <p>
-            <ul>
-                <li>Name: Abhai Kollara Dilip</li>
-                <li>What I do: Software engineering (I think) at <a href="http://zoko.io">zoko.io</a> (I'm sure)</li>
-                <li>Language I like: Python, Go</li>
-                <li>Twitter: <a href="https://twitter.com/abhai_kollara">https://twitter.com/abhai_kollara</a></li>
-                <li>Github: <a href="https://github.com/abhaikollara">https://github.com/abhaikollara</a></li>
-            </ul>
+            <table class="info-table">
+                <tr>
+                    <td>Name</td>
+                    <td>Abhai Kollara Dilip</td>
+                </tr>
+                <tr>
+                    <td>I do</td>
+                    <td>Software engineering (I think) at <a href="http://zoko.io">zoko.io</a> (I'm sure)</td>
+                </tr>
+                <tr>
+                    <td>I speak</td>
+                    <td>Malayalam, English</td>
+                </tr>
+                <tr>
+                    <td>I code in</td>
+                    <td>Python, Go</td>
+                </tr>
+                <tr>
+                    <td>Twitter</td>
+                    <td><a href="https://twitter.com/abhai_kollara">https://twitter.com/abhai_kollara</a></td>
+                </tr>
+                <tr>
+                    <td>Github</td>
+                    <td><a href="https://github.com/abhaikollara">https://github.com/abhaikollara</a></td>
+                </tr>
+            </table>
             </p>
             <h2>A few books I like</h2>
             <p>
@@ -41,11 +60,12 @@
                 <li><a href="https://en.wikipedia.org/wiki/The_Righteous_Mind">The Righteous Mind</a> [ Social
                     Psychology ]</li>
                 <li><a href="https://en.wikipedia.org/wiki/On_Intelligence">On Intelligence</a> [ Neuroscience ]</li>
-                <li><a href="https://en.wikipedia.org/wiki/Veronika_Decides_to_Die">Veronika Decides to Die</a> [ Novel ]</li>
+                <li><a href="https://en.wikipedia.org/wiki/Veronika_Decides_to_Die">Veronika Decides to Die</a> [ Novel
+                    ]</li>
                 <li><a href="https://en.wikipedia.org/wiki/The_Book_Thief">The Book Thief</a> [ Novel ]</li>
-                <li><a href="https://www.goodreads.com/book/show/43306206-the-courage-to-be-disliked">The Courage to be Disliked</a> [ Self-help/Psychology ]</li>
+                <li><a href="https://www.goodreads.com/book/show/43306206-the-courage-to-be-disliked">The Courage to be
+                        Disliked</a> [ Self-help/Psychology ]</li>
             </ul>
-            I'll probably add more here...
             </p>
         </div>
     </div>
