--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
             <p>
                 I just wanted to buy the domain 😬
             </p>
-            <h2>About me</h2>
+            <h2>Me</h2>
             <p>
-            <table class="info-table">
+            <table id="info-table">
                 <tr>
                     <td>Name</td>
                     <td>Abhai Kollara Dilip</td>
@@ -53,20 +53,40 @@
                 </tr>
             </table>
             </p>
-            <h2>A few books I like</h2>
+            <h2>A few good reads</h2>
             <p>
-            <ul>
-                <li><a href="https://en.wikipedia.org/wiki/Perfume_(novel)">Perfume</a> [ Novel ]</li>
-                <li><a href="https://en.wikipedia.org/wiki/The_Righteous_Mind">The Righteous Mind</a> [ Social
-                    Psychology ]</li>
-                <li><a href="https://en.wikipedia.org/wiki/On_Intelligence">On Intelligence</a> [ Neuroscience ]</li>
-                <li><a href="https://en.wikipedia.org/wiki/Veronika_Decides_to_Die">Veronika Decides to Die</a> [ Novel
-                    ]</li>
-                <li><a href="https://en.wikipedia.org/wiki/The_Book_Thief">The Book Thief</a> [ Novel ]</li>
-                <li><a href="https://www.goodreads.com/book/show/43306206-the-courage-to-be-disliked">The Courage to be
-                        Disliked</a> [ Self-help/Psychology ]</li>
-            </ul>
+            <table id="books-table">
+                <tr>
+                    <th>Title</th>
+                    <th>Genre</th>
+                </tr>
+                <tr>
+                    <td>Perfume</td>
+                    <td>Novel</td>
+                </tr>
+                <tr>
+                    <td>The Righteous Mind</td>
+                    <td>Social Psychology</td>
+                </tr>
+                <tr>
+                    <td>On Intelligence</td>
+                    <td>Neuroscience, Cognitive Science</td>
+                </tr>
+                <tr>
+                    <td>Veronika Decides to Die</td>
+                    <td>Novel</td>
+                </tr>
+                <tr>
+                    <td>The Book Thief</td>
+                    <td>Novel, (World War II)</td>
+                </tr>
+                <tr>
+                    <td>The Courage to be Disliked</td>
+                    <td>Self help, Psychology</td>
+                </tr>
+            </table>
             </p>
+
         </div>
     </div>
 </body>
