--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         <div class="inner-container">
             <p>
                 Hi, welcome to <b>abhai.dev</b>. To be honest, there isn't much to see here. I've written a few things
-                about myself. I've added a few links to things I found interesting. That's about it.
+                about myself. I might add anything that I find interesting. That's about it.
             </p>
             <p>
-                I just wanted to buy the domain 😬
+                In all honesty, I just wanted to buy the domain :-)
             </p>
             <h2>Me</h2>
             <p>
@@ -86,7 +86,6 @@
                 </tr>
             </table>
             </p>
-
         </div>
     </div>
 </body>
