--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
                 </tr>
             </table>
             </p>
+            <big><a href="posts/index.html">Read more</a></big>
         </div>
     </div>
 </body>
