Just testing something

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 </tr>
             </table>
             </p>
-            <big><a href="posts/index.html">Read more</a></big>
+            <big><a href="posts/">Read more</a></big>
         </div>
     </div>
 </body>
