--- a/writing/index.html
+++ b/writing/index.html
@@ -11,6 +11,20 @@
     <div class="container">
         <h1>Writings</h1>
         <hr>
+        <div class="inner-container">
+            <table id="writings-table">
+                <tr>
+                    <th>#</th>
+                    <th>Date</th>
+                    <th>Title</th>
+                </tr>
+                <tr>
+                    <td>#0</td>
+                    <td>Before genisis</td>
+                    <td>The reality fairy tale</td>
+                </tr>
+            </table>
+        </div>
     </div>
 </body>
 </html>
