--- a/index.html
+++ b/index.html
@@ -53,40 +53,9 @@
                 </tr>
             </table>
             </p>
-            <h2>A few good reads</h2>
             <p>
-            <table id="books-table">
-                <tr>
-                    <th>Title</th>
-                    <th>Genre</th>
-                </tr>
-                <tr>
-                    <td>Perfume</td>
-                    <td>Novel</td>
-                </tr>
-                <tr>
-                    <td>The Righteous Mind</td>
-                    <td>Social Psychology</td>
-                </tr>
-                <tr>
-                    <td>On Intelligence</td>
-                    <td>Neuroscience, Cognitive Science</td>
-                </tr>
-                <tr>
-                    <td>Veronika Decides to Die</td>
-                    <td>Novel</td>
-                </tr>
-                <tr>
-                    <td>The Book Thief</td>
-                    <td>Novel, (World War II)</td>
-                </tr>
-                <tr>
-                    <td>The Courage to be Disliked</td>
-                    <td>Self help, Psychology</td>
-                </tr>
-            </table>
+            <h2><a href="/lists">Lists</a></h2>
             </p>
-            <big><a href="writing">Read more</a></big>
         </div>
     </div>
 </body>
