--- a/writings/index.html
+++ b/writings/index.html
@@ -12,7 +12,7 @@
         <h1>Writings</h1>
         <hr>
         <div class="inner-container">
-            <table id="writings-table">
+            <table id="lists-table">
                 <tr>
                     <th>#</th>
                     <th>Date</th>
