--- a/index.html
+++ b/index.html
@@ -53,8 +53,12 @@
                 </tr>
             </table>
             </p>
+            <div>
+            </div>
             <p>
-            <h2><a href="/lists">Lists</a></h2>
+                <h3>Other stuff</h3>
+                <!-- <p><h4><a href="/lists">Lists</a></h4></p> -->
+                <p><h4><a href="/writings">Writings</a></h4></p>
             </p>
         </div>
     </div>
