--- a/writings/index.html
+++ b/writings/index.html
@@ -12,16 +12,16 @@
         <h1>Writings</h1>
         <hr>
         <div class="inner-container">
-            <table id="lists-table">
+            <table id="writings-table">
                 <tr>
                     <th>#</th>
-                    <th>Date</th>
                     <th>Title</th>
+                    <th>Date</th>
                 </tr>
                 <tr>
-                    <td>#0</td>
-                    <td>Before genisis</td>
-                    <td>The reality fairy tale</td>
+                    <td>0</td>
+                    <td>----</td>
+                    <td>Before 2017</td>
                 </tr>
             </table>
         </div>
