--- a/write.html
+++ b/write.html
@@ -13,15 +13,18 @@
         <hr>
         <div class="inner-container">
             <table id="writings-table">
-                <tr>
+                <!-- <tr>
                     <th>#</th>
                     <th>Title</th>
                     <th>Date</th>
-                </tr>
-                <tr>
+                </tr> -->
+                <!-- <tr>
                     <td>0</td>
                     <td>----</td>
                     <td>Before 2017</td>
+                </tr> -->
+                <tr>
+                    Coming soon . . .
                 </tr>
             </table>
         </div>
