--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <p>
                 <h3>Other stuff</h3>
                 <!-- <p><h4><a href="/lists">Lists</a></h4></p> -->
-                <p><h4><a href="/writings">Writings</a></h4></p>
+                <p><h4><a href="/write.html">Writings</a></h4></p>
             </p>
         </div>
     </div>
