--- a/index.html
+++ b/index.html
@@ -18,11 +18,10 @@
         <hr>
         <div class="inner-container">
             <p>
-                Hi, welcome to <b>abhai.dev</b>. To be honest, there isn't much to see here. I've written a few things
-                about myself. I might add anything that I find interesting. That's about it.
+                Hi, welcome to <b>abhai.dev</b>.
             </p>
             <p>
-                In all honesty, I just wanted to buy the domain :-)
+                <i>In all honesty, I just wanted to buy the domain :-)</i>
             </p>
             <h2>Me</h2>
             <p>
@@ -55,11 +54,11 @@
             </p>
             <div>
             </div>
-            <p>
+            <!-- <p>
                 <h3>Other stuff</h3>
-                <!-- <p><h4><a href="/lists">Lists</a></h4></p> -->
+                <p><h4><a href="/lists">Lists</a></h4></p>
                 <p><h4><a href="/write.html">Writings</a></h4></p>
-            </p>
+            </p> -->
         </div>
     </div>
 </body>
