--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </tr>
                 <tr>
                     <td>I do</td>
-                    <td>Software engineering (I think) at <a href="http://zoko.io">zoko.io</a> (I'm sure)</td>
+                    <td>Software engineering at <a href="http://zoko.io">zoko.io</a></td>
                 </tr>
                 <tr>
                     <td>I speak</td>
