--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
                     <td>Github</td>
                     <td><a href="https://github.com/abhaikollara">https://github.com/abhaikollara</a></td>
                 </tr>
+                <tr>
+                    <td>LinkedIn</td>
+                    <td><a href="https://www.linkedin.com/in/abhai-kollara">https://www.linkedin.com/in/abhai-kollara</a></td>
+                </tr>
             </table>
             </p>
             <div>
