add substack link

--- a/index.html
+++ b/index.html
@@ -54,7 +54,14 @@
                     <td>LinkedIn</td>
                     <td><a href="https://www.linkedin.com/in/abhai-kollara">https://www.linkedin.com/in/abhai-kollara</a></td>
                 </tr>
+                <tr>
+                    <td>LinkedIn</td>
+                    <td><a href="https://www.linkedin.com/in/abhai-kollara">https://www.linkedin.com/in/abhai-kollara</a></td>
+                </tr>
             </table>
+            </p>
+            <p>
+                Also, catch my newsletter on <a href="https://abhaikollara.substack.com">Substack</a>
             </p>
             <div>
             </div>
